--- a/src/CheckoutProduct.css
+++ b/src/CheckoutProduct.css
@@ -2,6 +2,11 @@
     display: flex;
     margin-top: 20px;
     margin-bottom: 20px;
+    margin-left: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    border-bottom: 1px solid #d3d3d3;
+    border-left: 1px solid #d3d3d3;
 }
 
 .checkoutProduct__info {
