--- a/src/Login.css
+++ b/src/Login.css
@@ -57,6 +57,6 @@
     border-radius: 2px;
     width: 100%;
     height: 30px;
-    border: 1px solid darkgray;
+    border: 1px solid #a9a9a9;
     margin-top: 10px;
 }
