--- a/src/Product.css
+++ b/src/Product.css
@@ -12,6 +12,11 @@
     z-index: 1;
 }
 
+.product:hover{
+    -webkit-animation: product-shadow 0.2s ease-in-out both;
+    animation: product-shadow 0.2s ease-in-out both;
+}
+
 .product__rating {
     display: flex;
 }
@@ -38,4 +43,33 @@
 .product__info {
     height: 100px;
     margin-bottom: 15px;
+}
+
+@-webkit-keyframes product-shadow {
+    0% {
+        -webkit-transform: translateZ(0);
+        transform: translateZ(0);
+        -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+    100% {
+        -webkit-transform: translateZ(50px);
+        transform: translateZ(50px);
+        -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.45);
+        box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.45);
+    }
+}
+@keyframes product-shadow {
+    0% {
+        -webkit-transform: translateZ(0);
+        transform: translateZ(0);
+        -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+    100% {
+        -webkit-transform: translateZ(50px);
+        transform: translateZ(50px);
+        -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.45);
+        box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.45);
+    }
 }
