--- a/src/Payment.css
+++ b/src/Payment.css
@@ -54,3 +54,8 @@
     border-color: #a88734 #9c7e31 #846a29;
     color: #111;
 }
+
+.payment__details > form > div > button:disabled {
+    background-color: #d3d3d3;
+    opacity: 0.5;
+}
