--- a/src/components/Payment/Payment.css
+++ b/src/components/Payment/Payment.css
@@ -59,3 +59,12 @@
     background-color: #d3d3d3;
     opacity: 0.5;
 }
+
+.payment__cardWarning {
+    color: #bc0000;
+    font-weight: bold;
+    font-size: 14px;
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
